# quantum-monte-carlo-for-insurance

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_compute_slopes.py  run_extended_qubits.py  run_n8_experiment.py  run_pipeline.py  run_quantile_comparison.py  run_reviewer_additions.py  run_reviewer_part1.py  run_reviewer_part2.py  run_reviewer_part3.py  run_timing_test.py
fairy_queen/: __init__.py  data_pipeline.py  experiment1.py  experiment2.py  experiment3.py  experiment4.py  experiment5.py  experiment6.py  experiment7.py  logging_config.py  quantum_circuits.py  results.py
full_paper/: paper.aux  paper.fdb_latexmk  paper.fls  paper.out  paper.tex
paper/: paper.aux  paper.fdb_latexmk  paper.fls  paper.out  paper.tex
tests/: test_data_pipeline.py  test_quantum_circuits.py
