[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fairy-queen"
version = "0.1.0"
description = "QAE vs Classical MC for catastrophe insurance tail-risk pricing"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
